--- a/src/son/analyze/resources/r/son.analyze/DESCRIPTION
+++ b/src/son/analyze/resources/r/son.analyze/DESCRIPTION
@@ -3,6 +3,14 @@ Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
 Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-Depends: R (>= 3.2.3)
-License: What license is it under?
+Depends:
+  R (>= 3.2.3),
+  ggplot2,
+  markovchain,
+Imports:
+  forecast,
+  purrr,
+  scales,
+  gridExtra
+License: Apache License 2.0
 LazyData: true
