Adding libraries in the base image

--- a/src/son/analyze/resources/r/Dockerfile
+++ b/src/son/analyze/resources/r/Dockerfile
@@ -1,7 +1,8 @@
 FROM rocker/hadleyverse:latest
 
 RUN echo 'to_install <- c("devtools", "roxygen2", "httr", "purrr", "gridExtra", \
-                          "rjson", "ggplot2", "forecast", "markovchain");' >> /tmp/cmds.R \
+                          "rjson", "ggplot2", "forecast", "markovchain", "lubridate", \
+                          "zoo", "xts", "som");' >> /tmp/cmds.R \
     && echo 'install.packages(to_install);' >> /tmp/cmds.R \
     && cat /tmp/cmds.R | r - \
     && echo 'Done'
