Adding new dependencies to the package description

--- a/src/son/analyze/resources/r/son.analyze/DESCRIPTION
+++ b/src/son/analyze/resources/r/son.analyze/DESCRIPTION
@@ -11,6 +11,9 @@ Imports:
   forecast,
   purrr,
   scales,
-  gridExtra
+  gridExtra,
+  httr,
+  lubridate,
+  rjson
 License: Apache License 2.0
 LazyData: true
