--- a/src/son/analyze/resources/r/Dockerfile
+++ b/src/son/analyze/resources/r/Dockerfile
@@ -5,7 +5,7 @@ ENV TZ='UTC'
 RUN echo "TZ='UTC'" >> /usr/lib/R/etc/Renviron \
     && echo 'to_install <- c("devtools", "roxygen2", "httr", "purrr", "gridExtra", \
                              "rjson", "ggplot2", "forecast", "markovchain", "lubridate", \
-                             "zoo", "xts", "som");' >> /tmp/cmds.R \
+                             "zoo", "xts", "som", "testthat");' >> /tmp/cmds.R \
     && echo 'install.packages(to_install);' >> /tmp/cmds.R \
     && cat /tmp/cmds.R | r - \
     && echo 'Done'
