--- a/src/son/analyze/resources/r/son.analyze/DESCRIPTION
+++ b/src/son/analyze/resources/r/son.analyze/DESCRIPTION
@@ -1,19 +1,22 @@
 Package: son.analyze
 Title: What the Package Does (one line, title case)
-Version: 0.0.0.9000
+Version: 0.0.2
 Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 Depends:
-  R (>= 3.2.3),
-  ggplot2,
-  markovchain,
+    R (>= 3.2.3),
+    ggplot2,
+    markovchain,
 Imports:
-  forecast,
-  purrr,
-  scales,
-  gridExtra,
-  httr,
-  lubridate,
-  rjson
+    forecast,
+    purrr,
+    scales,
+    gridExtra,
+    httr,
+    lubridate,
+    rjson
+Suggests:
+    testthat
 License: Apache License 2.0
 LazyData: true
+RoxygenNote: 5.0.1
