Refactor the project's structure to switch to scikit
Using namespaces

Reordering directory

Continue to refactor main package

Tweak around son_analyze refactoring

Starting to rename son_scikit

Refactoring son_scikit

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,6 @@
-recursive-include src/son/analyze/resources *
+recursive-include src/son_analyze/cli/resources *
+recursive-include son-scikit *
+global-exclude __pycache__
+global-exclude *.pyc
+global-exclude *~
+global-exclude .git .cache dist build venv venv3
