--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 recursive-include src/son_analyze/cli/resources *
 recursive-include son-scikit *
+recursive-include tests/unit/fixtures *
 global-exclude __pycache__
 global-exclude *.pyc
 global-exclude *~
