--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@
 docker-py==1.7.2
 pyaml==15.8.2
 PyYAML==3.11              # via pyaml
-requests==2.9.1           # via docker-py
+requests==2.9.1
 six==1.10.0               # via docker-py, websocket-client
 typing==3.5.0.1
 websocket-client==0.35.0  # via docker-py
